--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "chart.js": "^4.0.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.0.1",
